
dist_check_SCRIPTS = runner.sh

NULL =
test_sources = \
	1795612.js						\
	1850914.js						\
	1878155.js						\
	1880687.js						\
	2023624.js						\
	3184782.sql						\
	3470609.js						\
	3526726.tex						\
	68hc11.asm						\
	angle_bracket.cpp				\
	array_ref_and_out.cs			\
	array_spec.f90					\
	array-spec.f90					\
	attributes.cs					\
	auto.f							\
	bit_field.c						\
	bracematch.js					\
	bug1020715.cpp					\
	bug1020715.c					\
	bug1086609.c					\
	bug1093123.cpp					\
	bug1111214-j-chan.v				\
	bug1111214.v					\
	bug1201689.c					\
	bug1447756.java					\
	bug1458930.c					\
	bug1466117.c					\
	bug1491666.c					\
	bug1515910.cs					\
	bug1548443.cpp					\
	bug1563476.cpp					\
	bug1570779.sql					\
	bug1575055.cpp					\
	bug1585745.cpp					\
	bug1611054.cs					\
	bug1691412.java					\
	bug1742588.rb					\
	bug1743330.v					\
	bug1764143.h					\
	bug1764148.py					\
	bug1770479.cpp					\
	bug1773926.cpp					\
	bug1777344.java					\
	bug1799340.cpp					\
	bug1799343-1.cpp				\
	bug1799343-2.cpp				\
	bug1800065.cs					\
	bug1809024.py					\
	bug1830343.cs					\
	bug1830344.cs					\
	bug1856363.py					\
	bug1906062.py					\
	bug1907083.cpp					\
	bug1924919.cpp					\
	bug1938565.sql					\
	bug1944150.sql					\
	bug1950327.js					\
	bug1988026.py					\
	bug1988027.py					\
	bug1988130.py					\
	bug2049723.java					\
	bug2075402.py					\
	bug2117073.java					\
	bug2374109.vhd					\
	bug2411878.cs					\
	bug2747828.v					\
	bug2777310.js					\
	bug2781264.rb					\
	bug2886870.tex					\
	bug2888482.js					\
	bug3036476.js					\
	bug3168705.py					\
	bug3571233.js					\
	bug507864.c						\
	bug538629.asm					\
	bug556645.c						\
	bug556646.c						\
	bug565813.f90					\
	bug612019.pas					\
	bug612621.pl					\
	bug620288.f						\
	bug639639.h						\
	bug639644.hpp					\
	bug665086.cpp					\
	bug670433.f90					\
	bug699171.py					\
	bug722501.sql					\
	bug726712.f90					\
	bug726875.f90					\
	bug734933.f90					\
	bug762027.v						\
	bug814263.java					\
	bug823000.sql					\
	bug842077.pl					\
	bug849591.cpp					\
	bug852368.cpp					\
	bug858165.f90					\
	bug872494.cpp					\
	bug877956.f90					\
	bug960316.v						\
	bug961001.v						\
	byte.f							\
	char-selector.f90				\
	classes.php						\
	common.f						\
	continuation.f90				\
	countall.sql					\
	cpp_destructor.cpp				\
	cython_sample.pyx				\
	db-trig.sql						\
	debian_432872.f90				\
	directives.c					\
	dopbl2.f						\
	enum.c							\
	enum.java						\
	events.cs						\
	extern_variable.h				\
	forall_module.f90				\
	format.pl						\
	func_typedef.h					\
	general.cs						\
	hex2dec.sql						\
	implied_program.f				\
	indexer.cs						\
	infinite_loop.java				\
	ingres_procedures.sql			\
	initialization.f90				\
	interface_indexers.cs			\
	interface_properties.cs			\
	internal.cs						\
	intro_orig.tex					\
	intro.tex						\
	invalid_name.f90				\
	java_enum.java					\
	jsFunc_tutorial.js				\
	keyword_abstract.cs				\
	keyword_catch_try.cs			\
	keyword_class.cs				\
	keyword_const.cs				\
	keyword_delegate.cs				\
	keyword_enum.cs					\
	keyword_event.cs				\
	keyword_explicit.cs				\
	keyword_extern.cs				\
	keyword_implicit.cs				\
	keyword_interface.cs			\
	keyword_namespace.cs			\
	keyword_out.cs					\
	keyword_override.cs				\
	keyword_params.cs				\
	keyword_private.cs				\
	keyword_protected.cs			\
	keyword_public.cs				\
	keyword_sealed.cs				\
	keyword_static.cs				\
	keyword_struct.cs				\
	keyword_virtual.cs				\
	keyword_volatile.cs				\
	labels.sql						\
	lanus.for						\
	line_directives.c				\
	local.c							\
	macros.c						\
	masm.asm						\
	matlab_backtracking.m			\
	matlab_test.m					\
	maze.erl						\
	misc_types.f90					\
	misc_types.f					\
	mode.php						\
	moniker.x68.asm					\
	namelist.f						\
	namespace.cpp					\
	namespaces2.php					\
	namespaces.php					\
	no_terminator.js				\
	numlib.f90						\
	objectivec_implementation.mm	\
	objectivec_interface.mm			\
	objectivec_property.mm			\
	objectivec_protocol.mm			\
	Package.pm						\
	procedure_pointer_module.f90	\
	property.cs						\
	prototype.h						\
	pure_elem.f95					\
	random.sql						\
	readlob.sql						\
	readlong.sql					\
	recursive.f95					\
	refcurs.sql						\
	regexp.js						\
	secondary_fcn_name.js			\
	semicolon.f90					\
	signature.cpp					\
	simple.bas						\
	simple.cbl						\
	simple.html						\
	simple.js						\
	simple.ksh						\
	simple.lua						\
	simple.mak						\
	simple.php						\
	simple.pl						\
	simple.py						\
	simple.rb						\
	simple.sh						\
	simple.tcl						\
	spurious_label_tags.c			\
	sql_single_quote.sql			\
	state_machine.v					\
	static_array.c					\
	stdcall.f						\
	strings.rb						\
	structure.f						\
	tabindent.py					\
	test.py							\
	test.vhd						\
	traffic_signal.v				\
	traits.php						\
	union.f							\
	value.f							\
	$(NULL)
test_results = $(test_sources:=.tags)

TEST_EXTENSIONS = .tags
TAGS_LOG_COMPILER = $(srcdir)/runner.sh

TESTS = $(test_results)
EXTRA_DIST = $(test_sources) $(test_results)

runner.sh: ../../src/geany$(EXEEXT)
