
dist_check_SCRIPTS = runner.sh

NULL =
test_sources = \
	1795612.js						\
	1850914.js						\
	1878155.js						\
	1880687.js						\
	2023624.js						\
	3184782.sql						\
	3470609.js						\
	3526726.tex						\
	68hc11.asm						\
	angle_bracket.cpp				\
	anonymous_functions.php			\
	arraylist.js					\
	array_ref_and_out.cs			\
	array_spec.f90					\
	array-spec.f90					\
	attributes.cs					\
	auto.f							\
	backslashes.c					\
	bit_field.c						\
	block.f90						\
	bracematch.js					\
	bug1020715.cpp					\
	bug1020715.c					\
	bug1086609.c					\
	bug1093123.cpp					\
	bug1111214-j-chan.v				\
	bug1111214.v					\
	bug1201689.c					\
	bug1447756.java					\
	bug1458930.c					\
	bug1466117.c					\
	bug1491666.c					\
	bug1515910.cs					\
	bug1548443.cpp					\
	bug1563476.cpp					\
	bug1570779.sql					\
	bug1575055.cpp					\
	bug1585745.cpp					\
	bug1611054.cs					\
	bug1691412.java					\
	bug1742588.rb					\
	bug1743330.v					\
	bug1764143.h					\
	bug1764148.py					\
	bug1770479.cpp					\
	bug1773926.cpp					\
	bug1777344.java					\
	bug1799340.cpp					\
	bug1799343-1.cpp				\
	bug1799343-2.cpp				\
	bug1800065.cs					\
	bug1809024.py					\
	bug1830343.cs					\
	bug1830344.cs					\
	bug1856363.py					\
	bug1906062.py					\
	bug1907083.cpp					\
	bug1924919.cpp					\
	bug1938565.sql					\
	bug1944150.sql					\
	bug1950327.js					\
	bug1988026.py					\
	bug1988027.py					\
	bug1988130.py					\
	bug2049723.java					\
	bug2075402.py					\
	bug2117073.java					\
	bug2374109.vhd					\
	bug2411878.cs					\
	bug2747828.v					\
	bug2777310.js					\
	bug2781264.rb					\
	bug2886870.tex					\
	bug2888482.js					\
	bug3036476.js					\
	bug3168705.py					\
	bug3571233.js					\
	bug507864.c						\
	bug538629.asm					\
	bug556645.c						\
	bug556646.c						\
	bug565813.f90					\
	bug612019.pas					\
	bug612621.pl					\
	bug620288.f						\
	bug639639.h						\
	bug639644.hpp					\
	bug665086.cpp					\
	bug670433.f90					\
	bug699171.py					\
	bug722501.sql					\
	bug726712.f90					\
	bug726875.f90					\
	bug734933.f90					\
	bug762027.v						\
	bug814263.java					\
	bug823000.sql					\
	bug842077.pl					\
	bug849591.cpp					\
	bug852368.cpp					\
	bug858165.f90					\
	bug872494.cpp					\
	bug877956.f90					\
	bug960316.v						\
	bug961001.v						\
	byte.f							\
	c-digraphs.c					\
	c-trigraphs.c					\
	case_sensitivity.php			\
	char-selector.f90				\
	classes.php						\
	common.f						\
	complex-return.js				\
	continuation.f90				\
	continuation.mak				\
	countall.sql					\
	cpp_destructor.cpp				\
	css-at-rules.css				\
	css-at-supports.css				\
	css-attribute-selectors.css		\
	css-comma-no-space.css			\
	css-namespace-selectors.css		\
	css-pseudo-classes.css			\
	css-simple.css					\
	css-singlequote-in-comment-issue2.css	\
	css-tag-types.css				\
	css-trivial.css					\
	cython_sample.pyx				\
	cython_sample2.pyx				\
	cxx11enum.cpp					\
	cxx11-final.cpp					\
	cxx11-noexcept.cpp				\
	cxx11-override.cpp				\
	cxx11-raw-strings.cpp			\
	cxx14-combined.cpp				\
	db-trig.sql						\
	debian_432872.f90				\
	directives.c					\
	dopbl2.f						\
	dotted-names.json				\
	enum.c							\
	enum.f90						\
	enum.java						\
	enumerators.f90					\
	events.cs						\
	extern_variable.h				\
	forall_module.f90				\
	format.pl						\
	fortran_associate.f90			\
	fortran_line_continuation.f90	\
	func_typedef.h					\
	general.cs						\
	hex2dec.sql						\
	implied_program.f				\
	indexer.cs						\
	infinite_loop.java				\
	ingres_procedures.sql			\
	initialization.f90				\
	interface_indexers.cs			\
	interface_properties.cs			\
	interfaces.f90					\
	internal.cs						\
	intro_orig.tex					\
	intro.tex						\
	invalid_name.f90				\
	java_enum.java					\
	js-broken-strings.js			\
	js-class-related-unterminated.js	\
	js-const.js						\
	js-implicit-semicolons.js		\
	js-let.js						\
	js-scope.js						\
	js-signature.js					\
	js-string-continuation.js		\
	js-sub-block-scope.js			\
	js-unknown-construct-nesting.js	\
	jsFunc_tutorial.js				\
	keyword_abstract.cs				\
	keyword_catch_try.cs			\
	keyword_class.cs				\
	keyword_const.cs				\
	keyword_delegate.cs				\
	keyword_enum.cs					\
	keyword_event.cs				\
	keyword_explicit.cs				\
	keyword_extern.cs				\
	keyword_implicit.cs				\
	keyword_interface.cs			\
	keyword_namespace.cs			\
	keyword_names.f90				\
	keyword_out.cs					\
	keyword_override.cs				\
	keyword_params.cs				\
	keyword_private.cs				\
	keyword_protected.cs			\
	keyword_public.cs				\
	keyword_sealed.cs				\
	keyword_static.cs				\
	keyword_struct.cs				\
	keyword_virtual.cs				\
	keyword_volatile.cs				\
	labels.sql						\
	lanus.for						\
	line_directives.c				\
	local.c							\
	macros.c						\
	make-comment-in-rule.mak		\
	make-gnumake-pattern-rules.mak	\
	make-multi-target.mak			\
	make-parentheses.mak			\
	make-target-with-parentheses.mak	\
	make-variable-on-cmdline.mak	\
	masm.asm						\
	matlab_backtracking.m			\
	matlab_test.m					\
	maze.erl						\
	members.f90						\
	misc_types.f90					\
	misc_types.f					\
	mode.php						\
	moniker.x68.asm					\
	namelist.f						\
	namespace.cpp					\
	namespaces2.php					\
	namespaces.php					\
	no_terminator.js				\
	non-ascii-ident1.php			\
	numlib.f90						\
	objectivec_implementation.mm	\
	objectivec_interface.mm			\
	objectivec_property.mm			\
	objectivec_protocol.mm			\
	Package.pm						\
	php5_5_class_kw.php				\
	parenthesis-rvalue.js			\
	preprocessor.f90				\
	procedure_pointer_module.f90	\
	procpoint.f90					\
	property.cs						\
	prototype.h						\
	pure_elem.f95					\
	py_constructor_arglist.py		\
	py-skipped-string.py			\
	python-anonymous-nestlevel_ctags-bug-356.py	\
	python-comments.py				\
	qualified_types.f90				\
	random.sql						\
	readlob.sql						\
	readlong.sql					\
	recursive.f95					\
	refcurs.sql						\
	regexp.js						\
	return-hint.zep					\
	return-types.go					\
	ruby-block-call.rb				\
	ruby-doc.rb						\
	ruby-namespaced-class.rb		\
	ruby-scope-after-anonymous-class.rb	\
	ruby-sf-bug-364.rb				\
	rules.t2t						\
	sample.t2t						\
	secondary_fcn_name.js			\
	semicolon.f90					\
	shebang.js						\
	signature.cpp					\
	simple.bas						\
	simple.cbl						\
	simple.d						\
	simple.html						\
	simple.js						\
	simple.json						\
	simple.ksh						\
	simple.lua						\
	simple.mak						\
	simple.php						\
	simple.pl						\
	simple.ps1						\
	simple.py						\
	simple.rb						\
	simple.sh						\
	simple.tcl						\
	simple.zep						\
	size_t_wchar_t_alias.d			\
	size_t_wchar_t_typedef.c		\
	spurious_label_tags.c			\
	sql_single_quote.sql			\
	square_parens.f90				\
	state_machine.v					\
	static_array.c					\
	stdcall.f						\
	strings.php						\
	strings.rb						\
	structure.f						\
	tabindent.py					\
	test.erl						\
	test.go							\
	test.py							\
	test.vhd						\
	test_input.rs					\
	test_input2.rs					\
	titles.t2t						\
	traffic_signal.v				\
	traits.php						\
	ui5.controller.js				\
	union.f							\
	value.f							\
	var-and-return-type.cpp			\
	whitespaces.php					\
	$(NULL)
test_results = $(test_sources:=.tags)

TEST_EXTENSIONS = .tags
TAGS_LOG_COMPILER = $(srcdir)/runner.sh

TESTS = $(test_results)
EXTRA_DIST = $(test_sources) $(test_results)
